--- a/front/style1.css
+++ b/front/style1.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-    background-image: url(../assets/images/fondo.jpg);
+    background-image: url(../assets/images/wallpaper.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
