--- a/game/style2.css
+++ b/game/style2.css
@@ -29,9 +29,17 @@ h1 {
     font-family: Irish Grover;
     font-size: 80px;
     display: flex;
-    
+        
 }
 
+.title{
+    color:transparent;
+    background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
+    background-clip: texto;
+    -webkit-background-clip: text;
+   margin: 0;
+   font-size: 140px;
+}
 header, nav, main {
     padding: 1rem;
     text-align: center;
@@ -72,6 +80,15 @@ nav ul {
         font-size: 130px;
     }
 
+    .title{
+        color:transparent;
+        background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
+        background-clip: texto;
+        -webkit-background-clip: text;
+       margin: 0;
+       font-size: 140px;
+    }
+
     body {
         background-image: url(../assets/images/wallpaper.jpg);
         background-position: center;
@@ -81,5 +98,31 @@ nav ul {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+    }
+
+
+    .btn-arrow {
+        text-decoration: none;
+        display: inline-block;
+        position: relative;
+    }
+    
+    .image-container {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .image-container img {
+        display: block;
+    }
+    
+    .text-overlay {
+        position: absolute;
+         top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white; /* Ajusta el color del texto según sea necesario */
+        font-size: 16px; /* Ajusta el tamaño del texto según sea necesario */
+        font-weight: bold; /* Ajusta el peso del texto según sea necesario */
     }
 }
