--- a/front/style1.css
+++ b/front/style1.css
@@ -1,7 +1,4 @@
 /* Estilos para móvil */
-* {
-    box-sizing:  border-box;
-}  
 
 html, body {
     height: 100%;
@@ -18,23 +15,13 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow: hidden;
 }
 
-main {
-    flex:1;
+h1 {
+    font-family: Irish Grover;
 }
-
-.container {
-    max-width: 1280px;
-    margin: auto;
-}
-
-h1 {font-family: Irish Grover, Impact;}
-p, li {font-family: Josefin Sans, Arial;}
 
 header, nav, main {
-    padding: 1rem;
     text-align: center;
 }
 
@@ -43,14 +30,16 @@ header {
 }
 
 .button-red {
-    width: 90px;
     height: 90px;
     background-color: #ae0139;
     border: 3px solid #f7e034;
     border-radius: 30px;
     font-family: Irish Grover;
-    margin: auto;
+}
 
+.button-container {
+    margin: 6px auto; 
+    background-color: #643ea1;
 }
 
 button {
@@ -58,9 +47,10 @@ button {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    border: 1px  #f7e034;
+    width: 100%;
+    border: 1px solid #f7e034; 
     background-color: transparent; 
-    margin: auto;
+    padding: 0; 
 }
 
 .image-container {
@@ -111,9 +101,8 @@ footer {
         padding: 2 5;
         margin: 0;
         display: flex;
-        font-size: 0.7em;
     }
     .terms li {
-        margin: 0 7rem; 
+        margin: 0 5rem; 
     }
 }
