--- a/front/style1.css
+++ b/front/style1.css
@@ -14,35 +14,77 @@ body {
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    
+    /*min-height: 100vh;*/
+   
+    margin: 0 auto;
+    padding: 0;
 }
 
 main {
     flex:1;
+    padding: 0;
+    margin: 0;
+    justify-items: center;
+    align-content: center;
+}
+header{
+    width: 100%;
+    height: 200px;
 }
 
 h1 {
     font-family: Irish Grover;
+    height: 100%;
+    margin: auto;
+    padding: 10px;
+    
 }
-
+.home{
+    align-items: center;
+    justify-content: center;
+}
+.type{
+    color:transparent;
+    background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
+    background-clip: texto;
+    -webkit-background-clip: text;
+   margin: 0;
+   font-size: 140px;
+    
+}
 header, nav, main, footer {
-    padding: 1rem;
+    
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 header {
     color: white;
+   
+    
 }
 
+
 .button-red {
-    width: 90px;
-    height: 90px;
+    width: 490px;
+    height: 65px;
     background-color: #ae0139;
     border: 3px solid #f7e034;
     border-radius: 30px;
     font-family: Irish Grover;
-    margin: auto;
+    margin: 0 0 10% 0;
+    margin-top: -5%;
+    margin-left: 40%;
+    justify-content: center;
+    
 
+}
+.button-red, p{
+    font-size: 48px;
+    color: #f7e034;
 }
 
 button {
@@ -53,34 +95,86 @@ button {
     border: 1px  #f7e034;
     background-color: transparent; 
     margin: auto;
+   
+}
+.container {
+    width: 940px;
+    height: 540px;
+    background-color: hsl(263, 44%, 44%,80%);
+    border: 22px solid #f7e034;
+    border-radius: 90px;
+    display:flex;
+    padding: auto;
+    justify-content: center;
+    margin-left: 25%;
+    margin-top: -5%;
+    align-content: center;
+
+    
 }
 
 .image-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 90px;
-    height: 90px;
-    background-color: #643ea1;
+    /*display: flex;*/
+    /*align-items: center;
+    justify-content: center;*/
+    margin: 30% 20% 20% 20%;
+    position: relative;
+    
+   /* width: 90px;
+    height: 90px;*/
+    /*background-color: #643ea1;
     border: 3px solid #f7e034;
-    border-radius: 30px;
+    border-radius: 30px;*/
+    
 }
 
 .image-container img {
-    max-width: 65px;
-    max-height: 65px;
+    /*max-width: 65px;
+    max-height: 65px;*/
+    width: 238px;
+    height: 334px;
+    margin: 0;
+    padding: 26px;
+    
+   
 }
+
 
 nav ul {
     list-style: none;
     padding: 0;
 }
+.button-play {
+    width: 476px;
+    height: 103px;
+    background-color: #ae0139;
+    border: 3px solid #f7e034;
+    border-radius: 30px;
+    font-family: Irish Grover;
+    
+    margin-top: 20px;
+    align-items: center;
+    margin-left: 40%;
+    
+
+}
+.play{
+    font-size: 90px;
+    color: #f7e034;
+    -webkit-text-stroke: 2px black;
+}
+
 
 
 footer {
     background-color: #f05b16;
     color: white;
-    padding: 0.5rem 0;
+    /*padding: 0.5rem 0;*/
+    height: 50px;/* agregado*/
+    width: 100%;
+    display: flex;
+    padding: 0;
+    margin: 0;
 }
 
 .terms {
@@ -97,4 +191,62 @@ footer {
     header, nav, main, footer {
         padding: 2rem;
     }
+}
+
+@media screen and (max-width:576px) {
+    div, img {
+        width: 100%;
+    }
+    .container {
+        width: 300px;
+        height: 500px;
+        background-color: transparent;
+        border: transparent;
+        border-radius: 0;
+        justify-items: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+    
+
+}
+.image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(263, 44%, 44%,80%);
+    border: 10px solid #f7e034;
+    border-radius: 90px;
+    width: 300px;
+    height: 150px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 10%;
+    
+   
+    
+}
+
+.image-container img {
+    
+    width: 85px;
+    height: 120px;
+    margin: 0;
+    padding: 2px;
+    
+    
+   
+}
+.titulo {
+    font-size: 64px;
+}
+.button-red, p{
+    font-size: 32px;
+    
+}
+.button-red {
+    width: 334px;
+    height: 46px;
+}
 }
