--- a/front/style1.css
+++ b/front/style1.css
@@ -1,10 +1,6 @@
-/* Estilos para móvil */
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
+
+
 
 body {
     background-image: url(../assets/images/wallpaper.jpg);
@@ -13,13 +9,10 @@ body {
     background-size: cover;
     background-attachment: fixed;
     display: flex;
-   
-    
-    
-    height: 100vh;
-    margin: 20%;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0 auto;
     padding: 0;
-   
 }
 
 main {
@@ -32,18 +25,38 @@ main {
 header{
     width: 100%;
     height: 200px;
+    
+    
 }
 
 h1 {
     font-family: Irish Grover;
+    font-size: 130px;
     height: 100%;
-    margin: auto;
+    margin: 0;
     padding: 10px;
+  
     
 }
-.home{
-    align-items: center;
+.text-overlay-P {
+    position: absolute;
+    top: 65px;
+    left: 110px;
+    transform: translate(-50%, -50%);
+    color: #f7e034;
+    font-size: 16px; 
+    font-size: bold 36px ; 
+}
+
+#image-ballon-P {
+    width: 198px;
+    height: 300px;
+}
+.container-head {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    gap: 30px;
 }
 .type{
     color:transparent;
@@ -52,36 +65,35 @@ h1 {
     -webkit-background-clip: text;
    margin: 0;
    font-size: 140px;
-   justify-content: center;
-    
+   margin-left: 30%;
+   
 }
-header, nav, main, footer {
-    
+
+/*header, nav, main, footer {
+    padding: 1rem;
+    text-align: center;
     text-align: center;
     align-items: center;
-    
-    
-}
+    justify-content: center;
+}*/
 
 header {
     color: white;
-   
-    
 }
 
-
 .button-red {
+   
     width: 490px;
     height: 65px;
     background-color: #ae0139;
     border: 3px solid #f7e034;
     border-radius: 30px;
     font-family: Irish Grover;
-    margin: 0 0 10% 0;
-    margin-top: -5%;
-    margin-left: 40%;
-    justify-content: center;
+    margin: auto;
+    margin: 0 0 6% 0;
     
+    margin-left: 35%;
+    justify-content: center;
 
 }
 .button-red, p{
@@ -99,6 +111,7 @@ button {
     margin: auto;
    
 }
+
 .container {
     width: 940px;
     height: 540px;
@@ -108,44 +121,33 @@ button {
     display:flex;
     padding: auto;
     justify-content: center;
-    margin-left: 25%;
+    margin-left: 20%;
     margin-top: -5%;
     align-content: center;
 
-    
-}
 
-.image-container {
-    /*display: flex;*/
-    /*align-items: center;
-    justify-content: center;*/
-    margin: 30% 20% 20% 20%;
-    position: relative;
-    
-   /* width: 90px;
-    height: 90px;*/
-    /*background-color: #643ea1;
-    border: 3px solid #f7e034;
-    border-radius: 30px;*/
-    
 }
-
-.image-container img {
-    /*max-width: 65px;
-    max-height: 65px;*/
+.image-container{
+    height: 100%;
     width: 238px;
     height: 334px;
-    margin: 0;
-    padding: 26px;
+    margin-top: 30%;
     
+    width: 100%; /* Ancho de los divs */
+    padding: 10px; /* Espacio interno dentro de los divs */
+   
    
 }
+#button1{
+    margin-right: 0%;
+
+}
 
 
-nav ul {
+/*nav ul {
     list-style: none;
     padding: 0;
-}
+}*/
 .button-play {
     width: 476px;
     height: 103px;
@@ -153,11 +155,11 @@ nav ul {
     border: 3px solid #f7e034;
     border-radius: 30px;
     font-family: Irish Grover;
-    
+
     margin-top: 20px;
     align-items: center;
-    margin-left: 40%;
-    
+    margin-left: 35%;
+
 
 }
 .play{
@@ -171,29 +173,18 @@ nav ul {
 footer {
     background-color: #f05b16;
     color: white;
+    padding: 0.5rem 0;
     /*padding: 0.5rem 0;*/
     height: 50px;/* agregado*/
-    width: 100vh;
+    width: 100%;
     display: flex;
     padding: 0;
     margin: 0;
 }
 
-.terms {
-    list-style: none;
-}
 
-/* Estilos responsivos para PC 
-@media (min-width: 768px) {
-    nav ul li {
-        display: inline-block;
-        margin: 0 1rem;
-    }
+/* Estilos responsivos para movil */
 
-    header, nav, main, footer {
-        padding: 2rem;
-    }
-}*/
 
 @media screen and (max-width:576px) {
     div, img {
@@ -210,7 +201,7 @@ footer {
         flex-direction: column;
         padding: 0;
         margin: 0;
-    
+
 
 }
 .image-container {
@@ -225,31 +216,33 @@ footer {
     padding: 10px;
     margin: 10px;
     margin-left: 10%;
-    
-   
-    
+
+
+
 }
 
 .image-container img {
-    
+
     width: 85px;
     height: 120px;
     margin: 0;
     padding: 2px;
-    
-    
-   
+
+
+
 }
 .titulo {
     font-size: 64px;
 }
 .button-red, p{
     font-size: 32px;
-    
+
 }
 .button-red {
     width: 334px;
     height: 46px;
 }
-
+footer{
+    display: none;
+}
 }
