--- a/game/style2.css
+++ b/game/style2.css
@@ -1,24 +1,32 @@
-/* Estilos para móvil */
+/*Aqui va todo el desktop*/
+
+body {
+    background-image: url(../assets/images/wallpaper.jpg);
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    background-position: 50% 60% ;
+    background-size: 440%;
+}
+
 @media only screen and (max-width: 767px) and (orientation: landscape) {
 body {
     background-image: url(../assets/images/wallpaper.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
     background-attachment: fixed;
-    background-position: 50% 60%;
-    background-size: 450%;
-    /*height: 100%;*/
-    margin: 0;
-    padding: 0;
-}
-/*.container-general{}*/
+    background-position: 50% 60% ;
+    background-size: 440%;
 }
 
+.image-arrow {
+    width: 10px;
+    height: 10px;
+    padding-top: 10px;
+}
 .container-head {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    gap: 30px;
+    width: 500px;
+    margin-left: 120px;
 }
    
 .container-cups {
@@ -26,35 +34,42 @@ body {
     flex-direction: row;
     justify-content: center;
     gap: 30px;
+    padding-top: 50px;
+    padding-left: 25px;
 }
 
 .container-hourglass {
     float: right;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
+    padding-right: 10px;
 }
 
 .container-down {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-top: 90px;
-    gap: 80px
+    margin-top: 66px;
+
 }
 
 #imagen-button{
     width: 40px;
     height: 40px;
+    padding-bottom: 30px;
+    margin-left: 280px;
+    cursor: pointer;
 }
 
 #imagen-play{
     width: 40px;
     height: 40px; 
+    margin-left: 262px;
+    cursor: pointer;
 }
 
 #imagen-arrow {
-  width: 40px;
-  height: 20px;
-
+    padding: 10px;
+    width: 40px;
+    height: 25px;
 } 
 
 #image-ballon {
@@ -68,31 +83,43 @@ body {
 }
 
 #imagen-hourglass {
-    width: 40px;
-    height: 70px;
+    width: 45px;
+    height: 65px;
 }
 
 #imagen-cup-3 {
-    width: 70px;
-    height: 100px;
+    width: 90px;
+    height: 120px;
+}
+
+
+#reset {
+    background-color: #ae0139;
+    border: 3px solid #f7e034;
+    border-radius: 30px;
+    font-family: Irish Grover;
+    font-size: 18px;
+    padding: 5px 20px;
+    color: #f7e034;
+    cursor: pointer;
 }
 
 .text-overlay-1 {
     position: absolute;
     top: 65px;
-    left: 110px;
+    left: 133px;
     transform: translate(-50%, -50%);
-    color: white; /* Ajusta el color del texto según sea necesario */
-    font-size: 16px; /* Ajusta el tamaño del texto según sea necesario */
+    color: #f7e034;
+    font-size: 16px;
 }
 
 .text-overlay-2 {
     position: absolute;
     top: 65px;
-    right: 70px;
+    right: 103px;
     transform: translate(-50%, -50%);
-    color: white; /* Ajusta el color del texto según sea necesario */
-    font-size: 16px; /* Ajusta el tamaño del texto según sea necesario */
+    color: #f7e034;
+    font-size: 16px;
 }
 
 h1 {
@@ -106,91 +133,6 @@ h1 {
     background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
     background-clip: texto;
     -webkit-background-clip: text;
-   margin: 0;
+    margin: 0;
 }
-
-.image-container img {
-    max-width: 65px;
-    max-height: 65px;
 }
-
-
-.balloon{
-    background-image: none;
-}
-
-
-/* Estilos responsivos para PC */
-/*@media (min-width: 768px) {
-    nav ul li {
-        display: inline-block;
-        margin: 0 1rem;
-    }
-
-    header, nav, main {
-        padding: 2rem;
-    }
-
-    h1 {
-        font-family: Irish Grover;
-        font-size: 130px;
-    }
-
-    /*.title{
-        color:transparent;
-        background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
-        background-clip: texto;
-        -webkit-background-clip: text;
-       margin: 0;
-       font-size: 140px;
-    }*/
-
-    /*body {
-        background-image: url(../assets/images/wallpaper.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-
-
-    .btn-arrow {
-        text-decoration: none;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .image-container {
-        position: relative;
-        display: inline-block;
-    }
-    
-    .image-container img {
-        display: block;
-    }
-    
-    .text-overlay {
-        position: absolute;
-         top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%);*/
-        /*color: white; /* Ajusta el color del texto según sea necesario */
-        /*font-size: 16px; /* Ajusta el tamaño del texto según sea necesario */
-        /*font-weight: bold; /* Ajusta el peso del texto según sea necesario */
-
-/*
-body {
-    background-image: url(../assets/images/wallpaper.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}*/
-
-   /*background-position: 50% 40%; /* Ajusta la posición de la imagen de fondo */ /*background-size: 150%; /* Ajusta el tamaño de la imagen de fondo para hacer zoom * */
