--- a/front/style1.css
+++ b/front/style1.css
@@ -1,4 +1,9 @@
-
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 
 
@@ -24,70 +29,54 @@ main {
 }
 header{
     width: 100%;
-    height: 200px;
+   height: 200px;
     
     
 }
 
-h1 {
-    font-family: Irish Grover;
-    font-size: 130px;
-    height: 100%;
-    margin: 0;
-    padding: 10px;
-  
-    
-}
+
 .container-ballon-P{
    display: flex;
-    justify-content:center;
-    align-content: center;
     margin-left: 10%;
     padding: 10%;
-    height: 400px;
-    width: 200px;
     margin-top: -15%;
 }
 .text-overlay-P {
-    left: 90px;
+    
     transform: translate(-50%, -50%);
     color: #f7e034;
     font-size: 36px ; 
-    margin-top: 25%;
-    margin-left: 15%;
-}
-
-#image-ballon-P {
-    width: 280px;
-    height: 340px;
-    margin-top: -85%;
-    margin-left: -60%;
+    margin-top: 40%;
+    margin-right: 100px;
     
 }
 
-.type{
+#image-ballon-P {
+    width: 260px;
+    height: 310px;
+    margin-top: -85%;
+    margin-left: -60%;
+    padding: 0;
+
+    
+}
+
+h1{
     color:transparent;
     background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
     background-clip: texto;
     -webkit-background-clip: text;
    margin: 0;
    font-size: 140px;
-   margin-left: 30%;
-   
+   margin-left: 33%;
+   font-family: Irish Grover;
 }
 
-/*header, nav, main, footer {
-    padding: 1rem;
-    text-align: center;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-}*/
 
 header {
     color: white;
 }
-
+/*boton instrucciones*/
 .button-red {
    
     width: 490px;
@@ -98,9 +87,9 @@ header {
     font-family: Irish Grover;
     margin: auto;
     margin: 0 0 6% 0;
-    
-    margin-left: 35%;
+    margin-left: 36%;
     justify-content: center;
+    display: flex;
 
 }
 .button-red, p{
@@ -118,7 +107,7 @@ button {
     margin: auto;
    
 }
-
+/* caja vasos*/
 .container {
     width: 940px;
     height: 540px;
@@ -128,33 +117,30 @@ button {
     display:flex;
     padding: auto;
     justify-content: center;
-    margin-left: 20%;
+    margin-left: 25%;
     margin-top: -5%;
     align-content: center;
 
 
 }
 .image-container{
-    height: 100%;
     width: 238px;
     height: 334px;
     margin-top: 30%;
-    
-    width: 100%; /* Ancho de los divs */
-    padding: 10px; /* Espacio interno dentro de los divs */
-   
+    padding: 10px; 
    
 }
 #button1{
     margin-right: 0%;
 
 }
+/*boton de play y sonido*/
 
-
-/*nav ul {
-    list-style: none;
-    padding: 0;
-}*/
+.container-song{
+    display: flex;
+    height: 150px;
+    width: 100%;
+}
 .button-play {
     width: 476px;
     height: 103px;
@@ -165,7 +151,7 @@ button {
 
     margin-top: 20px;
     align-items: center;
-    margin-left: 35%;
+    margin-left: 38%;
 
 
 }
@@ -175,12 +161,18 @@ button {
     -webkit-text-stroke: 2px black;
 }
 
-
-
+.image-sound{
+   
+    align-items:center;
+    margin-left: 15%;
+    
+ 
+}
+/*footer*/
 footer {
     background-color: #f05b16;
     color: white;
-    height: 50px;/* agregado*/
+    height: 50px;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -189,14 +181,12 @@ footer {
 footer p{
     color: white;
     font-size: 16px;
-   display: flex;
-    display: inline;width: 100%;
-    padding:  auto;
-    margin-left: 15% ;
-
-    
+    width: 100%;
+    justify-items: center;
     align-content: space-between;
-    text-align: justify;
+    text-align: center;
+    padding: auto;
+
 }
 .terms{
     width: 100%;
@@ -208,23 +198,53 @@ footer p{
 
 @media screen and (max-width:576px) {
     body{
-        display: ;
-        flex-direction: row;
+       /* display:flex ;
+        flex-direction: column;*/
+        grid-template-columns: 1fr;
+        display: grid;
+        justify-content: center;
+        align-items: center;
     }
-    div, img {
+    header{
         width: 100%;
+       height: 10px;
+        
+        
+    }
+    .btn-score-P{
+        display: contents;
+        
+    }
+    .container-ballon-P{
+        display: flex;
+         padding: 0;
+         margin-top: 5%;
+         
+     }
+
+    #image-ballon-P {
+        width: 90px;
+        height: 90px;
+     
+        
+    }
+    .text-overlay-P {
+        margin-top: 10px;
+        font-size: 16px ; 
+        display: flex;
+        
     }
     .container {
-        width: 300px;
-        height: 500px;
+        
         background-color: transparent;
         border: transparent;
         border-radius: 0;
-        justify-items: center;
+        justify-content: center;
         align-items: center;
         flex-direction: column;
         padding: 0;
         margin: 0;
+       
 
 
 }
@@ -242,9 +262,17 @@ footer p{
     margin-left: 10%;
 
 
+}
+h1 {
+    font-size: 64px;
+    margin-top: -5%;
+    justify-content: center;
+    
+}
+.button-red p{
+    font-size: 1.8rem;
 
 }
-
 .image-container img {
 
     width: 85px;
@@ -252,21 +280,40 @@ footer p{
     margin: 0;
     padding: 2px;
 
-
-
-}
-.titulo {
-    font-size: 64px;
-}
-.button-red, p{
-    font-size: 32px;
-
 }
 .button-red {
     width: 334px;
     height: 46px;
+    justify-content: center;
+    margin-top: -10%;
 }
+
+.button-play {
+    width: 170px;
+    height: 77px;
+    margin-top: 10%;
+    display: flex;
+    margin-right: 15%;
+   
+
+
+}
+.play{
+    font-size: 50px;
+    color: #f7e034;
+    -webkit-text-stroke: 2px black;
+}
+
 footer{
     display: none;
 }
+/*
+
+.button-red, p{
+    font-size: 32px;
+
+}
+
+*/
+
 }
