--- a/game/style2.css
+++ b/game/style2.css
@@ -1,11 +1,146 @@
-/*Aqui va todo el desktop*/
+/*Aqui va todo el desktop, Dimensiones Desktop 1400 x 667 (fuera del media query va todo lo del desktop*/
 
 body {
     background-image: url(../assets/images/wallpaper.jpg);
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-position: 50% 60% ;
-    background-size: 440%;
+    background-size: 400%;
+}
+
+.image-arrow {
+    width: 10px;
+    height: 10px;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+.play-button {
+    padding-left: 55px;
+    padding-right: 50px;
+}
+
+.container-head {
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    margin-left: 390px;
+    gap: 20px;
+}
+   
+.container-cups {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+    padding-top: 65px;
+    padding-left: 65px;
+}
+
+.container-hourglass {
+    float: right;
+    margin-top: 120px;
+    padding-right: 45px;
+}
+
+.container-down {
+    display: flex;
+    flex-direction: row;
+    padding-top: 110px;
+    padding-left: 120px;
+    gap: 130px;
+}
+
+#imagen-button{
+    width: 55px;
+    height: 55px;
+    padding-bottom: 30px;
+    margin-left: 280px;
+    cursor: pointer;
+}
+
+#imagen-play{
+    width: 55px;
+    height: 55px; 
+    margin-left: 262px;
+    cursor: pointer;
+}
+
+#imagen-arrow {
+    padding: 20px;
+    padding-top: 10px;
+    width: 60px;
+    height: 35px;
+} 
+
+#image-ballon {
+    width: 170px;
+    height: 190px;
+}
+
+#imagen-ballon-2 {
+    width: 170px;
+    height: 190px;
+}
+
+#imagen-hourglass {
+    width: 60px;
+    height: 80px;
+}
+
+#imagen-cup-3 {
+    width: 150px;
+    height: 200px;
+}
+
+
+#reset {
+    background-color: #ae0139;
+    border: 3px solid #f7e034;
+    border-radius: 30px;
+    font-family: Irish Grover;
+    font-size: 25px;
+    padding: 5px 20px;
+    color: #f7e034;
+    cursor: pointer;
+}
+/* TO DO: 
+El globo y los textos estan dando problemas por que van por separado, la mejor forma de arreglarlo es tenerlo en un mismo componente;
+Hay que crear un div y ponerle de background el icono del globo y dentro del texto del div poner las letras amarillas para que se vuelva un solo componente */
+
+.text-overlay-1 {
+    position: absolute;
+    top: 95px;
+    left: 306px;
+    transform: translate(-50%, -50%);
+    color: #f7e034;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.text-overlay-2 {
+    position: absolute;
+    top: 95px;
+    right: 392px;
+    transform: translate(-50%, -50%);
+    color: #f7e034;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h1 {
+    font-family: Irish Grover;
+    font-size: 80px;
+}
+
+
+.title{
+    color:transparent;
+    background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
+    background-clip: texto;
+    -webkit-background-clip: text;
+    margin: 0;
+    font-size: 100px;
 }
 
 @media only screen and (max-width: 767px) and (orientation: landscape) {
@@ -21,7 +156,14 @@ body {
     width: 10px;
     height: 10px;
     padding-top: 10px;
+    padding-left: 0;
 }
+
+.play-button{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .container-head {
     display: flex;
     justify-content: center;
@@ -48,6 +190,9 @@ body {
     display: flex;
     flex-direction: row;
     margin-top: 66px;
+    padding-top: 0px;
+    padding-left: 0px;
+    gap: 0px;
 
 }
 
@@ -111,6 +256,7 @@ body {
     transform: translate(-50%, -50%);
     color: #f7e034;
     font-size: 16px;
+    font-weight: bold
 }
 
 .text-overlay-2 {
@@ -120,6 +266,7 @@ body {
     transform: translate(-50%, -50%);
     color: #f7e034;
     font-size: 16px;
+    font-weight: bold;
 }
 
 h1 {
@@ -134,5 +281,6 @@ h1 {
     background-clip: texto;
     -webkit-background-clip: text;
     margin: 0;
+    font-size: 80px;
 }
 }
