--- a/game/style2.css
+++ b/game/style2.css
@@ -13,46 +13,46 @@ body {
 }
 
 .image-arrow {
-    width: 10px;
-    height: 10px;
-    padding-top: 20px;
-    padding-left: 30px;
+    width: 5%;
+    height: 10%;
+    padding-top: 2%;
+    padding-left: 2%;
 }
 
 .play-button {
-    padding-left: 30px;
-    padding-right: 50px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .container-head {
     display: flex;
     justify-content: center;
-    width: 500px;
-    margin-left: 430px;
-    gap: 20px;
+    width: 20%;
+    margin-left: 45%;
+    gap: 10%;
 
 }
    
 .container-cups {
     display: flex;
     flex-direction: row;
-    gap: 40px;
-    padding-top: 180px;
-    padding-left: 400px;
+    gap: 3%;
+    padding-top: 8%;
+    padding-left: 32%;
 }
 
 .container-hourglass {
     float: right;
-    margin-top: 120px;
+    margin-top: 5%;
     padding-right: 5px;
 }
 
 .container-down {
     display: flex;
     flex-direction: row;
-    padding-top: 160px;
-    padding-left: 100px;
-    gap: 150px;
+    padding-top: 10%;
+    padding-left: 8%;
+    gap: 10%;
 }
 
 
@@ -74,14 +74,14 @@ body {
 #imagen-arrow {
     padding: 20px;
     padding-top: 10px;
-    width: 60px;
-    height: 35px;
+    width: 100%;
+    height: 100%;
 } 
 
 
 #imagen-ballon-2 {
-    width: 210px;
-    height: 230px;
+    width: 20%;
+    height: 50%;
 }
 
 #imagen-hourglass {
