--- a/front/style1.css
+++ b/front/style1.css
@@ -74,7 +74,7 @@ header {
 .red_choose {
   height: 40px;
   width: 65%;
-  background-color: rgba(255, 22, 170, 0.8); 
+  background-color: rgba(174, 1, 57); 
   border: 3px solid #f7e034;
   border-radius: 30px;
   font-family: Irish Grover;
@@ -94,7 +94,7 @@ header {
 .red_play {
   height: 65px;
   width: 60%;
-  background-color: rgba(255, 22, 170, 0.8); 
+  background-color: rgba(174, 1, 57); 
   border: 3px solid #f7e034;
   border-radius: 30px;
   font-family: Irish Grover;
@@ -118,7 +118,7 @@ header {
 .circus {
   height: 130px;
   width: 55%;
-  background-color: rgba(166, 12, 197, 0.8); 
+  background-color: hsl(263, 44%, 44%,80%); 
   border: 6px solid rgba(247, 224, 52, 1); 
   border-radius: 50px;
   margin: 0 auto;
