--- a/game/style2.css
+++ b/game/style2.css
@@ -51,10 +51,10 @@ body {
     display: flex;
     flex-direction: row;
     padding-top: 10%;
-    padding-left: 8%;
-    gap: 10%;
+      gap: 10%;
+    width: 100%;
+    justify-content: center;
 }
-
 
 #imagen-button{
     width: 55px;
