--- a/front/style1.css
+++ b/front/style1.css
@@ -29,9 +29,11 @@ h1 {
 }
 
 .title {
-  background-image: linear-gradient(45deg, #ffcc00, #ff9900); 
-  -webkit-background-clip: text; 
-  -moz-background-clip: text;
+ color:transparent;
+    background: linear-gradient(hsl(58, 100%, 61%) 46% , hsl(22, 100%, 50%) 70%,hsl(20, 98%, 51%) 100%, hsl(8, 89%, 58%)100%);
+    background-clip: texto;
+    -webkit-background-clip: text;
+  /*-moz-background-clip: text;*/
   background-clip: text;
   background-size: 100% 100%;  
   background-repeat: no-repeat; 
@@ -67,8 +69,9 @@ header {
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px; 
-  color: white;
+  color:rgba(247, 224, 52, 1);
   z-index: 2;
+  font-family: Irish Grover;
 }
 
 .red_choose {
@@ -185,28 +188,22 @@ ul {
  }
 
 h1{
-    display: flex;
    
-    margin: 0;
+   margin: 0;
+   font-size: 140px;
     height:100%;
     text-align: center;
     justify-content: center;
     margin-top: 3%;
    
 }
-.title{
-  font-size: 128px;
-}
 
-.container{
-  display: contents;
-  justify-content: center;
-  
-}
+
+
 .container-ballon-1{
   display: flex;
    padding: 0;
-   margin-left: 18%;
+   margin-left: 5%;
    margin-top: 4%;
    height: 100%;
   
@@ -235,24 +232,89 @@ height: 300px;
 
 }
 
+.cups-mobile{
+  height: 540px;
+  width: 940px;
+  background-color: hsl(263, 44%, 44%,80%); 
+  border: 6px solid rgba(247, 224, 52, 1); 
+  border-radius: 50px;
+  margin: 0 auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: flex; 
+  align-items: center; 
+}
+.circus {
+  width: 240px;
+  height: 333px;
+  background-color: transparent; 
+  border: transparent; 
+  border-radius: 50px;
+  margin: 0 auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: flex; 
+  align-items: center; 
+}
+.image-container img {
   
-  footer {
-      background-color: #f05b16;
-      color: white;
+  max-width: 100%;
+  max-height: auto;
+ gap:20%;
+
+}
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  
+ 
+}
+#circus1{
+  width: 50%;
+}
+
+
+.rectangle {
+  height: 50%;
+  margin-top: -30%;
+  justify-content: space-between;
+  
+}
+.rectangle img{
+  gap:20%;
+}
+.terms{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  gap:10%
+
+  
+}
+.red_play {
+  height: 103px;
+  width: 326px;
+  font-size: 90px;
+  margin-top: 2px;
+  margin-left: 40%;
+}
+.sound-button img {
+  width: 75px;
+  height: 75px;
+}
+  footer {     
       padding: 0.5rem 0;
   }
   
- 
-
   .terms li {
-      margin: 0 10rem; 
+      
+      width: 100%;
   }
 
   .cups_mobile {
-    display: none;
-  }
-  
-  .image-container {
     display: none;
   }
 
@@ -261,16 +323,24 @@ height: 300px;
 
   }
 
-.rectangle {
-  height: 10%;
-}
-
-.element {
-  height: 85px;
-  width: auto;
-}
-
 circus {
   display: none;
+}
+footer {
+  height: 50px;
+  bottom: 0;
+  left: 0;
+ 
+  font-family: Josefin Sans, Arial;
+  text-align:center;
+  justify-content:center;
+  flex-direction: column;
+  display: flex;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  width: 100%;
 }
 }
