--- a/game/style2.css
+++ b/game/style2.css
@@ -50,9 +50,10 @@ body {
 .container-down {
     display: flex;
     flex-direction: row;
-    padding-top: 10%;
-    padding-left: 8%;
-    gap: 10%;
+    padding-top: 5%;
+    padding-left: 7%;
+    gap: 1%;
+
 }
 
 .reset-button {
@@ -133,6 +134,7 @@ body {
     font-size: 160%;
     font-weight: bold;
     cursor: pointer;
+    font-family: Irish Grover;
 }
 
 /*GLOBO 2*/
@@ -160,6 +162,45 @@ body {
     color: #f7e034;
     font-size: 160%;
     font-weight: bold;
+    cursor: pointer;
+    font-family: Irish Grover;
+
+}
+
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+}
+
+.close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -222,6 +263,7 @@ h1 {
 .container-ballon-2 {
     position: relative;
     display: inline-block;
+    font-family: Irish Grover;
 }
 
 .btn-ballon {
@@ -244,6 +286,8 @@ h1 {
     font-size: 80%;
     font-weight: bold;
     cursor: pointer;
+    font-family: Irish Grover;
+
 }
 
 .image-arrow {
@@ -268,7 +312,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     gap: 3%;
-    padding-top: 3%;
+    padding-top: 7%;
     padding-left: 35%;
 }
 
@@ -282,25 +326,24 @@ h1 {
     display: flex;
     flex-direction: row;
     margin-top: 8%;
-    padding-top: 0px;
+    padding-top: 0%;
     padding-left: 3%;
 }
 
 .reset-button {
     padding-left: 3%;
-    padding-top: 5%;
+    padding-top: 2%;
 }
 
 #imagen-button{
-    margin-left: 35%;
-    margin-top: 5%;
+    margin-left: 30%;
     width: 20%;
     height: 55%; 
     cursor: pointer;
 }
 
 #imagen-play{
-    width: 15%;
+    width: 12%;
     height: 70%;
     margin-left: 52%;
     cursor: pointer;
@@ -334,6 +377,7 @@ h1 {
     padding: 5px 20px;
     color: #f7e034;
     cursor: pointer;
+
 }
 
 .title{
