--- a/front/style1.css
+++ b/front/style1.css
@@ -24,7 +24,7 @@ main{
 h1 {
   font-family: Irish Grover;
   font-size: 60px;
-  height: 100%;  
+  /*height: 100%;  */
   margin-top: 95px;
 }
 
@@ -35,13 +35,14 @@ h1 {
     -webkit-background-clip: text;
   /*-moz-background-clip: text;*/
   background-clip: text;
-  background-size: 100% 100%;  
+  /*background-size: 100% 100%; */ 
   background-repeat: no-repeat; 
   -webkit-text-fill-color: transparent;
 }
 
 header, nav, main {
   text-align: center;
+  height: 100%;
 }
 
 header {
